# app/Swagger/Annotations/RorkebController.php
@@ -1,0 +1,16 @@
+<?php
+namespace App\Swagger\Annotations;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Get(
+ *     summary="Ror",
+ *     path="/api/v1/utility/xyz",
+ *     tags={"Rorkeb Endpoint"},
+ *     @OA\Response(response=200, description="Success")
+ * )
+ * */
+class RorkebController
+{
+
+}
